--- a/package.json
+++ b/package.json
@@ -73,6 +73,7 @@
     "express-wolox-logger": "^2.0.0",
     "http-status-codes": "^1.4.0",
     "jwt-simple": "^0.5.1",
+    "nodemailer": "^6.8.0",
     "pg": "^7.18.2",
     "reflect-metadata": "^0.1.13",
     "rollbar": "^2.3.9",
@@ -91,6 +92,7 @@
     "@types/jest": "^25.1.3",
     "@types/jwt-simple": "^0.5.33",
     "@types/node": "^13.7.6",
+    "@types/nodemailer": "^6.4.7",
     "@types/pg": "^7.14.1",
     "@types/request-promise": "^4.1.44",
     "@types/supertest": "^2.0.8",
